--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -46,3 +46,42 @@ ul.topnav li a:hover(.active) {
 ul.topnav li a.active {
 	background-color:  #E22C2C;
 }
+
+li a, .dropbtn {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover, .dropdwn:hover .dropbtn {
+    background-color: #E22C2C;
+}
+
+li.dropdwn {
+    display: inline-block;
+}
+
+.dropdwn-content {
+    display: none;
+    position: absolute;
+    background-color: #1D1E21;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdwn-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdwn-content a:hover {background-color: #f1f1f1}
+
+.dropdwn:hover .dropdwn-content {
+    display: block;
+}
