--- a/app/views/layouts/templates/menu.scala.html
+++ b/app/views/layouts/templates/menu.scala.html
@@ -8,9 +8,9 @@
 		<li><a href="">Administrador</a></li>
 		<li class="right"><a href="" >Cordófonos</a></li>
 		<li class="right dropdwn">
-			<a href="" class="dropbtn">Usuario</a>
+			<a href="" id="userTag" class="dropbtn">Usuario<span class="caret"></span></a>
     		<div class="dropdwn-content">
-		      	<a href="#">Usuario</a>
+		      	<a href="#">Perfil</a>
 				<a class="cerrarSesion" href="@routes.Authenticate.logout()">Cerrar Sesión</a>
 	    	</div>
     	</li>
