--- a/app/views/layouts/templates/menu.scala.html
+++ b/app/views/layouts/templates/menu.scala.html
@@ -1,4 +1,4 @@
-<div id="menu" class="col-md-12">
+<div class="menu col-md-10">
 	<ul class="topnav">
 		<li><a class="active" href="">Inicio</a></li>
 		<li><a href="">Crear Orden de Servicio</a></li>
@@ -6,13 +6,5 @@
 		<li><a href="">Venta</a></li>
 		<li><a href="">Accesorios</a></li>
 		<li><a href="">Administrador</a></li>
-		<li class="right"><a href="" >Cordófonos</a></li>
-		<li class="right dropdwn">
-			<a href="" id="userTag" class="dropbtn">Usuario<span class="caret"></span></a>
-    		<div class="dropdwn-content">
-		      	<a href="#">Perfil</a>
-				<a class="cerrarSesion" href="@routes.Authenticate.logout()">Cerrar Sesión</a>
-	    	</div>
-    	</li>
 	</ul>
 </div>
