--- a/app/views/layouts/main.scala.html
+++ b/app/views/layouts/main.scala.html
@@ -5,14 +5,14 @@
     @layouts.templates.header(title, styles)
     <body class="container-fluid">
         <div class="row">            
-            @layouts.templates.menu()
-            <div id="contentWrapper">
-                @content
-                
-            </div>
-            @layouts.templates.footer() 
-            
-            <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
+            @layouts.templates.menu(true)
+            @layouts.templates.profile()
         </div>
+        <div id="contentWrapper">
+            @content
+            
+        </div>
+        @layouts.templates.footer()        
+        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
 </html>
