--- a/app/views/layouts/templates/menu.scala.html
+++ b/app/views/layouts/templates/menu.scala.html
@@ -1,15 +1,16 @@
 @(
 	displayMenu: Boolean
 )
-<div class=" menu col-md-10">
+<div class=" menu col-md-11 col-xs-8">
 	<ul class="topnav">
 		<li><a class="active" href="">Inicio</a></li>
 		@if(displayMenu){
-		<li class="hidden-sm"><a href="">Crear Orden de Servicio</a></li>
-		<li class="hidden-sm"><a href="">Buscar Orden de Servicio</a></li>
-		<li class="hidden-sm"><a href="">Venta</a></li>
-		<li class="hidden-sm"><a href="">Accesorios</a></li>
-		<li class="hidden-sm"><a href="">Administrador</a></li>
+			<li class="hidden-md hidden-lg"><a href="">Menú<span class="caret"></a></li>
+			<li class="hidden-sm hidden-xs"><a href="#">Crear Orden de Servicio</a></li>
+			<li class="hidden-sm hidden-xs"><a href="#">Buscar Orden de Servicio</a></li>
+			<li class="hidden-sm hidden-xs"><a href="#">Venta</a></li>
+			<li class="hidden-sm hidden-xs"><a href="#">Accesorios</a></li>
+			<li class="hidden-sm hidden-xs"><a href="#">Administrador</a></li>
 		}
 	</ul>
 </div>
