--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -44,26 +44,14 @@ ul.topnav li a:hover(.active) {
 ul.topnav li a.active {
 	background-color:  #E22C2C;
 }
-
 li a, .dropbtn {
     display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
+    text-align: center;    
     text-decoration: none;
 }
-
-/*li a:hover, a.dropbtn:hover .dropbtn {
-    background-color: #E22C2C;
-}*/
 li a:hover, .dropdwn-content:hover{
-    background-color: black;
+    background-color: #1D1E21;
 }
-
-li.dropdwn {
-    display: inline-block;
-}
-
 .dropdwn-content {
     display: none;
     position: absolute;
@@ -73,20 +61,16 @@ li.dropdwn {
     z-index: 1;
     right: 0;
 }
-
 .dropdwn-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    text-align: left;
-    
+    text-align: left;    
 }
-.dropdwn-content a:hover {background-color: #E22C2C}
-
+.dropdwn-content a:hover {
+	background-color: #E22C2C
+}
 .dropdwn:hover .dropdwn-content {
     display: block;
-}
-#userTag{
-	color
 }
