WIP - Crear Orden de servicio; cambios menores menu

--- a/app/views/layouts/templates/header.scala.html
+++ b/app/views/layouts/templates/header.scala.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="icon" href="@routes.Assets.versioned("images/minor.png")">
+	<link rel="icon" href="@routes.Assets.versioned("images/minuscula.png")">
 	<title>@title</title>
 
  	<link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.css")"> 
