--- a/app/views/layouts/main.scala.html
+++ b/app/views/layouts/main.scala.html
@@ -1,25 +1,16 @@
-@(title: String,styles: Html)(content: Html)
+@(title: String,styles: Html,displayMenu:Boolean)(content: Html)
 
 <!DOCTYPE html>
 <html lang="es">
     @layouts.templates.header(title, styles)
     <body class="container-fluid">
         <div class="row">            
-            @layouts.templates.menu()
+            @layouts.templates.menu(displayMenu)
             @layouts.templates.profile()
         </div>
-        <div id="contentWrapper">
+        <div id="contentWrapper" class="col-md-offset-2 col-md-8">
             @content
-            @layouts.templates.menu(true)
-            @layouts.templates.profile()
         </div>
-        <div id="contentWrapper">
-            @content
-            
-        </div>
-        @layouts.templates.footer() 
-        
-        <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
         @layouts.templates.footer()        
         <script src="@routes.Assets.versioned("javascripts/main.js")" type="text/javascript"></script>
     </body>
