--- a/app/views/layouts/templates/menu.scala.html
+++ b/app/views/layouts/templates/menu.scala.html
@@ -1,21 +1,21 @@
 @(
 	displayMenu: Boolean
 )
-<div class=" menu col-md-11 col-xs-8">
+<div class=" menu col-md-10 col-xs-8">
 	<ul class="topnav">
-		<li><a class="active" href="">Inicio</a></li>
+		<li><a class="active" href="@routes.HomeController.index()">Inicio</a></li>
 		<li class="hidden-md hidden-lg dropdwn"><a class="dropbtn">Menú<span class="caret"></a>
 			<div class="dropdwn-content">
-		      	<a href="#">Crear Orden de Servicio</a>
 				<a href="#">Buscar Orden de Servicio</a>
+		      	<a href="@routes.OrdenesServicios.indexCreateOrden()">Crear Orden de Servicio</a>
 				<a href="#">Venta</a>
 				<a href="#">Accesorios</a>
 				<a href="#">Administrador</a>
 			</div>
 		</li>
 		@if(displayMenu){
-			<li class="hidden-sm hidden-xs"><a href="#">Crear Orden de Servicio</a></li>
 			<li class="hidden-sm hidden-xs"><a href="#">Buscar Orden de Servicio</a></li>
+			<li class="hidden-sm hidden-xs"><a href="@routes.OrdenesServicios.indexCreateOrden()">Crear Orden de Servicio</a></li>
 			<li class="hidden-sm hidden-xs"><a href="#">Venta</a></li>
 			<li class="hidden-sm hidden-xs"><a href="#">Accesorios</a></li>
 			<li class="hidden-sm hidden-xs"><a href="#">Administrador</a></li>
