--- a/app/views/layouts/templates/profile.scala.html
+++ b/app/views/layouts/templates/profile.scala.html
@@ -1,7 +1,7 @@
-<div class="menu col-md-1 col-xs-4">
+<div class="menu col-md-2 col-xs-4">
 	<ul class="topnav">
 		<li class="right dropdwn">
-		<a class="dropbtn">Usuario<span class="caret"></span></a>
+		<a class="dropbtn">@Usuario.getByName(session().get("userName")).obtenNombre<span class="caret"></span></a>
 		<div class="dropdwn-content">
 	      	<a href="#">Perfil</a>
 			<a class="cerrarSesion" href="@routes.Authenticate.logout()">Cerrar Sesión</a>
