--- a/app/views/layouts/templates/menu.scala.html
+++ b/app/views/layouts/templates/menu.scala.html
@@ -5,7 +5,7 @@
 	<ul class="topnav">
 		<li><a class="active" href="@routes.HomeController.index()">Inicio</a></li>
 		<li class="hidden-md hidden-lg dropdwn"><a class="dropbtn">Menú<span class="caret"></a>
-			<div class="dropdwn-content">
+			<div class="dropdwn-content left">
 				<a href="#">Buscar Orden de Servicio</a>
 		      	<a href="@routes.OrdenesServicios.indexCreateOrden()">Crear Orden de Servicio</a>
 				<a href="#">Venta</a>
