--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -27,7 +27,8 @@ ul.topnav li a{
 	padding: 14px 16px;
 	text-align: center;
 	text-decoration: none;
-	font-weight: bold
+	font-weight: bold;
+	margin-right:0;
 }
 ul.topnav li a.right{
 	color: #E22C2C;
@@ -73,4 +74,11 @@ li a:hover, .dropdwn-content:hover{
 }
 .dropdwn:hover .dropdwn-content {
     display: block;
+}
+.right{
+	text-align: right;
+	float:right;
+}.left{
+	text-align: left;
+	float:left;
 }
