WIP crear Orden servicio

--- a/app/views/app/ordenServicio/create/_formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/_formCreate.scala.html
@@ -6,14 +6,72 @@
 		<h3>Orden de Servicio</h3>
 	</div>
 	<div class="col-md-6">
-		<h4>Folio <strong style="color: #27ae60;">0000</strong></h4>
+		<h4>Número de Orden <strong style="color: #27ae60; vertical-align: bottom;">0000</strong></h4>
+		<h4>Fecha (TODO)</h4>
+		<h4>Entrega (TODO)</h4>
+		<h4>Hora (TODO)</h4>
 	</div>
 </div>
-	<fieldset>
-		<div>
-			<legend></legend>
-		</div>
-		<div>
+<hr>
+<div class="row clearfix" >
+	<div class="col-md-12">
+		<fieldset>
 			<legend>Cliente</legend>
+			<div>
+				<button class="btn btn-primary">Buscar Cliente</button>
+			</div>
+			<!-- <div class="col-md-12"> -->
+				<div class=" col-md-6">
+					<label for="">Nombre del Cliente:<input type="text" class="form-control"></label>
+					<label for="">Ciudad:<input type="text" class="form-control"></label>
+					<label for="">Teléfono:<input type="text" class="form-control"></label>
+				</div>
+				<div class=" col-md-6 ">
+					<label for="">Email:<input type="text" class="form-control"></label>
+					<label for="">WhatsApp:<input type="text" class="form-control"></label>
+					<label for="">Facebook:<input type="text" class="form-control"></label>
+				<!-- </div> -->
+			</div>
+		</fieldset>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12">
+		<legend>Instrumento</legend>
+		<div>
+			<p>Tipo de instrumento</p>
+			<label for="guitarraElectrica">Guitarra Eléctrica<input type="radio" name="guitarraElectrica" value="Guitarra Eléctrica"></label>
+			<label for="guitarraAcustica">Guitarra Acústica<input type="radio" name="guitarraAcustica" value="Guitarra Acústica"></label>
+			<label for="bajoElectrico">Bajo Eléctrico<input type="radio" name="bajoElectrico" value="Bajo Eléctrico"></label>
+			<label for="bajoaAcustico">Bajo Acústico<input type="radio" name="bajoaAcustico" value="Bajo Acústico"></label>
+			<label for="otroInstrumento">Otro<input type="radio" name="otro" value="Otro"></label>
 		</div>
-	</fieldset>
+		<div>
+			<label for="">Marca:<input type="text" class="form-control"></label>
+			<label for="">Modelo:<input type="text" class="form-control"></label>
+			<label for="">Núm. Serie:<input type="text" class="form-control"></label>
+			<label for="">Color:<input type="text" class="form-control"></label>
+			<label for="">Fecha de Producción:<input type="text" class="form-control"></label>
+			<label for="">Almacén:<input type="text" class="form-control"></label>
+		</div>
+		<div>
+			<p>Recibido en</p>
+			<label for="estuche">Estuche<input type="radio" name="estuche" value="Estuche"></label>
+			<label for="semi">Semi<input type="radio" name="semi" value="Semi"></label>
+			<label for="funda">Funda<input type="radio" name="funda" value="Funda"></label>
+			<label for="otroRecibido">Otro<input type="radio" name="otro" value="Otro"></label>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12">
+		<legend>Inspección e Inventario</legend>
+		
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-12">
+		<legend>Servicios a realizar</legend>
+		
+	</div>
+</div>
