--- a/app/views/layouts/main.scala.html
+++ b/app/views/layouts/main.scala.html
@@ -8,7 +8,7 @@
             @layouts.templates.menu(displayMenu)
             @layouts.templates.profile()
         </div>
-        <div id="contentWrapper" class="panel panel-default col-md-offset-2 col-md-8">
+        <div id="contentWrapper" class="panel panel-default col-md-offset-2 col-md-8 col-xs-12">
             @content
         </div>
         @layouts.templates.footer()        
