--- a/app/views/app/ordenServicio/create/_formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/_formCreate.scala.html
@@ -4,9 +4,11 @@
 <div class="row clearfix">
 	<div class="col-md-6">
 		<h3>Orden de Servicio</h3>
+		<div>
+		<h4>Número de Orden <strong style="color: #E22C2C; vertical-align: bottom; background-color: #dff0d8;">0000</strong></h4>
+		</div>
 	</div>
 	<div class="col-md-6">
-		<h4>Número de Orden <strong style="color: #27ae60; vertical-align: bottom;">0000</strong></h4>
 		<h4>Fecha (TODO)</h4>
 		<h4>Entrega (TODO)</h4>
 		<h4>Hora (TODO)</h4>
@@ -20,6 +22,7 @@
 			<div>
 				<button class="btn btn-primary">Buscar Cliente</button>
 			</div>
+			<div class="row space"></div>
 			<!-- <div class="col-md-12"> -->
 				<div class=" col-md-6">
 					<label for="">Nombre del Cliente:<input type="text" class="form-control"></label>
@@ -38,7 +41,7 @@
 <div class="row">
 	<div class="col-md-12">
 		<legend>Instrumento</legend>
-		<div>
+		<div class="col-md-12">
 			<p>Tipo de instrumento</p>
 			<label for="guitarraElectrica">Guitarra Eléctrica<input type="radio" name="guitarraElectrica" value="Guitarra Eléctrica"></label>
 			<label for="guitarraAcustica">Guitarra Acústica<input type="radio" name="guitarraAcustica" value="Guitarra Acústica"></label>
