--- a/app/views/layouts/templates/footer.scala.html
+++ b/app/views/layouts/templates/footer.scala.html
@@ -1,6 +1,5 @@
-<html>
-
-	<footer id="ftr" class="navbar">
+<div class="row">
+	<footer class="footer col-md-12">
 		<p>Developed by <a href="">HWC</a>. 2017.</p>
 	</footer>
-</html>
+</div>
