--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,25 +1,20 @@
 #contentWrapper{
-  z-index: 0;
+  margin-bottom: 80px;
   margin-top: 80px;
-  color:black;
 }
-#ftr{
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
+.footer{
+  
   color:#9B96A3;
   background-color: #1D1E21;
   background-image: url("https://www.transparenttextures.com/patterns/dark-circles.png");
   text-align: center;
-  height: 1em;
-  margin-bottom: 0;
+  height: 50px;
 }
-#ftr a{
+.footer a{
   font-weight: bold;
   color: #E22C2C;
 }
-#ftr a:hover{
+.footer a:hover{
   text-shadow: 1 1;
   text-decoration: none;
 }
