--- a/app/views/layouts/main.scala.html
+++ b/app/views/layouts/main.scala.html
@@ -5,10 +5,9 @@
     @layouts.templates.header(title, styles)
     <body class="container-fluid">
         <div class="row">            
-            @layouts.templates.menu(displayMenu)
-            @layouts.templates.profile()
+            @layouts.templates.navbar(displayMenu)
         </div>
-        <div id="contentWrapper" class="panel panel-default col-md-offset-2 col-md-8 col-xs-12">
+        <div class="contentWrapper panel panel-default col-md-offset-2 col-md-8 col-xs-12">
             @content
         </div>
         @layouts.templates.footer()        
