--- a/app/views/layouts/templates/footer.scala.html
+++ b/app/views/layouts/templates/footer.scala.html
@@ -1,5 +1,11 @@
 <div class="row">
-	<footer class="footer col-md-12">
+	<footer class="footer col-md-12 col-xs-12 col-lg-12">
 		<p>Developed by <a href="">HWC</a>. 2017.</p>
 	</footer>
 </div>
+
+<!-- <footer class="footer">
+      <div class="container">
+        <span class="text-muted">Developed by <a href="">HWC</a>. 2017.</span>
+      </div>
+</footer> -->
