--- a/app/views/layouts/templates/profile.scala.html
+++ b/app/views/layouts/templates/profile.scala.html
@@ -1,4 +1,4 @@
-<div class="menu right col-md-2 col-xs-4">
+<div class="menu-right col-md-2 col-xs-4">
 	<ul class="topnav">
 		<li class="right dropdwn">
 		<a class="dropbtn">@Usuario.getByName(session().get("userName")).obtenNombre<span class="caret"></span></a>
