--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,46 +1,93 @@
-#contentWrapper{
-  margin-bottom: 80px;
-  margin-top: 80px;
+@media screen and (max-width: 600px)
+{
 }
-.footer{
-  
-  color:#9B96A3;
-  background-color: #1D1E21;
-  background-image: url("https://www.transparenttextures.com/patterns/dark-circles.png");
-  text-align: center;
-  height: 50px;
+.contentWrapper
+{
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
-.footer a{
+.footer
+{
+    height: 50px;
+    text-align: center;
+    color: #9b96a3;
+    background-color: #1d1e21;
+    background-image: url('https://www.transparenttextures.com/patterns/dark-circles.png');
+}
+.footer a
+{
+    font-weight: bold;
+    color: #e22c2c;
+}
+.footer a:hover
+{
+    text-decoration: none;
+    text-shadow: 1 1;
+}
+#header
+{
+    position: relative;
+    top: 0;
+    left: :0;
+    display: block;
+    height: auto;
+    margin: 0;
+    padding-bottom: .3em;
+    background: #1d1e21/* 2B3032 *//* #2c3e50 */;
+    background-image: url('https://www.transparenttextures.com/patterns/dark-circles.png');
+}
+#header h1
+{
+    font-family: 'Maven Pro', sans-serif;
+    text-align: left;
+    color: #e22c2c;
+    text-shadow: 3px 3px black;
+}
+#header h3
+{
+    font-family: sans-serif;
+    color: #fff;
+    text-shadow: 2px 2px black;
+}
+.login-form
+{
+    margin: 0 auto;
+    text-align: center;
+}
+.navbar{
+  background-color: #1d1e21;
+  background-image: url('https://www.transparenttextures.com/patterns/dark-circles.png');
+}
+.navbar-header a.navbar-brand{
+  color: #e22c2c;
+}
+.navbar-header a.navbar-brand:hover{
+  color: #e22c2c;
+
+}
+.nav.navbar-nav li a{
+  color: white;
+}
+/*#navbar > ul:nth-child(1) > li.active{
+  background-color: #e22c2c;
+}*/
+#navbar > ul:nth-child(1) > li.active > a{
+  color:black;
   font-weight: bold;
-  color: #E22C2C;
+  background-color: #e22c2c;
 }
-.footer a:hover{
-  text-shadow: 1 1;
-  text-decoration: none;
+#navbar > ul > li.dropdown.open > ul{
+      background: #1d1e21/* 2B3032 *//* #2c3e50 */;
 }
-#header{
-  display: block;
-  position: relative;
-  top:0;
-  left: :0;
-  margin: 0;
-  background: #1D1E21/* 2B3032 *//* #2c3e50 */;
-  background-image: url("https://www.transparenttextures.com/patterns/dark-circles.png");
-  padding-bottom: 0.3em;
-  height: auto;
+#navbar > ul > li.dropdown.open > a:focus{
+      background-color: black;  
 }
-#header h1{
-  text-align: left;
-  font-family: 'Maven Pro', sans-serif;
-  color: #E22C2C;
-  text-shadow: 3px 3px black;
+#navbar > ul > li.dropdown.open > ul:hover{
+      background-color: black;
 }
-#header h3{
-  font-family: sans-serif;
-  color: #fff;
-  text-shadow: 2px 2px black;
-}
-.login-form{
-  text-align: center;
-  margin: 0 auto;
+/*#navbar > ul > li.dropdown.open > ul:focus{
+      background-color: black;
+}*/
+#navbar > ul > li.dropdown.open > ul > li:focus > a{
+    background-color: black;
 }
