--- a/app/views/layouts/templates/navbar.scala.html
+++ b/app/views/layouts/templates/navbar.scala.html
@@ -19,22 +19,22 @@ displayMenu: Boolean)
           <li><a href="@routes.OrdenesServicios.indexCreateOrden()">Crear Orden</a></li>
           <li><a href="#">Venta</a></li>
           <li><a href="#">Accesorios</a></li>
-          <li class="dropdown">
+         <!--  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Acciones Admin<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Catálogos</a></li>
-              <li><a href="#">Usuarios</a></li>
-              <!-- <li role="separator" class="divider"></li>
+              <li role="separator" class="divider"></li>
               <li class="dropdown-header">Nav header</li>
               <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li> -->
+              <li><a href="#">One more separated link</a></li>
             </ul>
-          </li>
+          </li> -->
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">@Usuario.getByName(session().get("userName")).obtenNombre <span class="caret"></span></a>
             <ul class="dropdown-menu">
+              <li><a href="#">Catálogos</a></li>
+              <li><a href="#">Usuarios</a></li>
               <li><a href="#">Perfil</a></li>
               <li><a href="@routes.Authenticate.logout()">Cerrar Sesión</a></li>
               <!-- <li role="separator" class="divider"></li>
