--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,9 @@
 @media screen and (max-width: 600px)
 {
 }
+body{
+  font-family: 'Maven Pro', sans-serif;
+}
 .contentWrapper
 {
     margin-top: 80px;
@@ -55,6 +58,7 @@
     text-align: center;
 }
 .navbar{
+  font-family: 'Maven Pro', sans-serif;
   background-color: #1d1e21;
   background-image: url('https://www.transparenttextures.com/patterns/dark-circles.png');
 }
@@ -68,13 +72,13 @@
 .nav.navbar-nav li a{
   color: white;
 }
-/*#navbar > ul:nth-child(1) > li.active{
-  background-color: #e22c2c;
-}*/
 #navbar > ul:nth-child(1) > li.active > a{
   color:black;
   font-weight: bold;
   background-color: #e22c2c;
+}
+#navbar > ul:nth-child(1) > li.active > a:hover{
+  font-weight: bold;
 }
 #navbar > ul > li.dropdown.open > ul{
       background: #1d1e21/* 2B3032 *//* #2c3e50 */;
@@ -90,4 +94,20 @@
 }*/
 #navbar > ul > li.dropdown.open > ul > li:focus > a{
     background-color: black;
+}
+#navbar > ul.nav.navbar-nav.navbar-right > li > a:focus{
+  font-weight: bold;
+  color: white;
+}
+#navbar > ul.nav.navbar-nav.navbar-right > li > ul > li > a:hover{
+  background-color: black;
+  color: #e22c2c;
+}
+#navbar > ul > li> a:hover{
+  font-weight: bold;
+  color: white;
+}
+.radio-spaced label{
+  padding-left: 10px;
+  padding-right: 10px;
 }
