--- a/app/views/layouts/templates/header.scala.html
+++ b/app/views/layouts/templates/header.scala.html
@@ -12,6 +12,8 @@
  	<link rel="stylesheet" href="@routes.Assets.versioned("bootstrap/css/bootstrap.css")"> 
     
     <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
+
+    <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/lib/awesome-bootstrap-checkbox.css")">
         
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/libs/jquery/jquery-1.11.1.min.js")"></script> 
