--- a/app/views/app/ordenServicio/create/_formCreate.scala.html
+++ b/app/views/app/ordenServicio/create/_formCreate.scala.html
@@ -129,76 +129,135 @@
 <div class="row">
 	<div class="col-md-12">
 		<legend><h3>Inspección e Inventario</h3></legend>
-			<div class="checkbox checkbox-danger">
-				<input type="checkbox" name="estuche" value="Estuche">
-				<label for="estuche">Acción y Encontación</label>
+			<div class="row checkbox checkbox-danger">
+				<div class="col-md-6">
+					<div>
+						<input type="checkbox" name="estuche" value="Estuche">
+						<label for="estuche">Acción y Entonación</label>
+					</div>
+					<div>
+						<input type="checkbox" name="estuche" value="Estuche">
+						<label for="estuche">Condiciones para Ajuste</label>
+					</div>
+					<div>
+						<input type="checkbox" name="estuche" value="Estuche">
+						<label for="estuche">Electrónica</label>
+					</div>
+					
+				</div>
+				<div class="col-md-6">
+					<div>
+						<input type="checkbox" name="estuche" value="Estuche">
+						<label for="estuche">Herrajes</label>
+					</div>
+					<div>
+						<input type="checkbox" name="estuche" value="Estuche">
+						<label for="estuche">Plásticos, Tapas y Placas</label>
+					</div>
+					
+				</div>
 			</div>
 
 			<div class="row" id="accionEntonacion">			
-				<div class="col-md-12">
-					<div class="col-md-offset-2 col-md-4">
-						<label for="funda">Acción en el Puente</label>
+				<div class="col-sm-12 col-md-12 dimMargin">
+					<legend><h4>Acción y Entonación</h4></legend>
+					<div class="col-md-offset-2 col-sm-offset-2 col-md-4 col-sm-4 clearfix">
+						<label class="clearMargin">Acción en el Puente</label>
 					</div>
 					
-					<div class="col-md-6">
-						<input type="radio" name="funda" value="Óptimas Condiciones">
-							<label for="funda">B</label>
-						<input type="radio" name="funda" value="Puede requerir Atención">
-							<label for="funda">R</label>
-						<input type="radio" name="funda" value="Atención Inmediata">
-							<label for="funda">M</label>
-						<input type="radio" name="funda" value="Anotaciones">
-							<label for="funda">A</label>
+					<div class="radio radio-red clearfix col-md-6 col-sm-4">
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Óptimas Condiciones">
+								<label for="funda">B</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Puede requerir Atención">
+								<label for="funda">R</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Atención Inmediata">
+								<label for="funda">M</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Anotaciones">
+								<label for="funda">A</label>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-12">
-					<div class="col-md-offset-2 col-md-4">
-						<label for="funda">Acción en Cejuela</label>
+				<div class="col-sm-12 col-md-12 dimMargin">
+					<div class="col-md-offset-2 col-sm-offset-2 col-md-4 col-sm-4 clearfix">
+						<label class="clearMargin">Acción en Cejuela</label>
 					</div>
 					
-					<div class="col-md-6">
-						<input type="radio" name="funda" value="Óptimas Condiciones">
-							<label for="funda">B</label>
-						<input type="radio" name="funda" value="Puede requerir Atención">
-							<label for="funda">R</label>
-						<input type="radio" name="funda" value="Atención Inmediata">
-							<label for="funda">M</label>
-						<input type="radio" name="funda" value="Anotaciones">
-							<label for="funda">A</label>
+					<div class="radio radio-red clearfix col-md-6 col-sm-4">
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Óptimas Condiciones">
+								<label for="funda">B</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Puede requerir Atención">
+								<label for="funda">R</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Atención Inmediata">
+								<label for="funda">M</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Anotaciones">
+								<label for="funda">A</label>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-12">
-					<div class="col-md-offset-2 col-md-4">
-						<label for="funda">Curvatura de Brazo</label>
+				<div class="col-sm-12 col-md-12 dimMargin">
+					<div class="col-md-offset-2 col-sm-offset-2 col-md-4 col-sm-4 clearfix">
+						<label class="clearMargin">Curvatura de Brazo</label>
 					</div>
 					
-					<div class="col-md-6">
-						<input type="radio" name="funda" value="Óptimas Condiciones">
-							<label for="funda">B</label>
-						<input type="radio" name="funda" value="Puede requerir Atención">
-							<label for="funda">R</label>
-						<input type="radio" name="funda" value="Atención Inmediata">
-							<label for="funda">M</label>
-						<input type="radio" name="funda" value="Anotaciones">
-							<label for="funda">A</label>
+					<div class="radio radio-red clearfix col-md-6 col-sm-4">
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Óptimas Condiciones">
+								<label for="funda">B</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Puede requerir Atención">
+								<label for="funda">R</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Atención Inmediata">
+								<label for="funda">M</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Anotaciones">
+								<label for="funda">A</label>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-12">
-					<div class="col-md-offset-2 col-md-4">
-						<label for="funda">Entonación</label>
+				<div class="col-sm-12 col-md-12 dimMargin">
+					<div class="col-md-offset-2 col-sm-offset-2 col-md-4 col-sm-4 clearfix">
+						<label class="clearMargin">Entonación</label>
 					</div>
 					
-					<div class="col-md-6">
-						<input type="radio" name="funda" value="Óptimas Condiciones">
-							<label for="funda">B</label>
-						<input type="radio" name="funda" value="Puede requerir Atención">
-							<label for="funda">R</label>
-						<input type="radio" name="funda" value="Atención Inmediata">
-							<label for="funda">M</label>
-						<input type="radio" name="funda" value="Anotaciones">
-							<label for="funda">A</label>
+					<div class="radio radio-red clearfix col-md-6 col-sm-4">
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Óptimas Condiciones">
+								<label for="funda">B</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Puede requerir Atención">
+								<label for="funda">R</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Atención Inmediata">
+								<label for="funda">M</label>
+						</div>
+						<div class="col-md-3 col-sm-3">
+							<input type="radio" name="funda" value="Anotaciones">
+								<label for="funda">A</label>
+						</div>
 					</div>
 				</div>
+				
+				
 			</div>
 		
 	</div>
